--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ joblib==1.0.1
 MarkupSafe==2.0.1
 msgpack==1.0.2
 multitasking==0.0.9
-numpy==1.21.2
+numpy
 pandas==1.1.5
 pandas-ta==0.3.14b0
 plotly==5.3.1
