--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ pyOpenSSL==21.0.0
 python-dateutil==2.8.2
 pytz==2021.3
 requests==2.26.0
-scikit-learn==1.0
+scikit-learn
 scipy==1.7.1
 service-identity==21.1.0
 six==1.16.0
