--- a/requirements.txt
+++ b/requirements.txt
@@ -44,16 +44,6 @@ python-dateutil==2.8.2
 pytz==2021.3
 requests==2.26.0
 scikit-learn
-scipy==1.7.1
-service-identity==21.1.0
-six==1.16.0
-sqlparse==0.4.2
-tenacity==8.0.1
-threadpoolctl==3.0.0
-Twisted==21.7.0
-txaio==21.2.1
-typing-extensions==3.10.0.2
-urllib3==1.26.7
-Werkzeug==2.0.2
+scipy
 yfinance==0.1.63
-zope.interface==5.4.0
+
